[package]
name = "sqlite_archive_rs"
version = "0.1.0"
authors = ["Andrew Nelson <evildarkarchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = [ "wrap_help" ]}
rusqlite = {version = "0.19.0", features = [ "bundled", "blob" ]}
sha2 = "0.8.0"